<resources>
    <string name="app_name">WareHouseManagerApp</string>
    <string name="home_name">Home</string>
    <string name="goods_name">Goods</string>
    <string name="bill_name">Bill</string>
    <string name="outlay_name">Outlay</string>
    <string name="report_name">Report</string>
    <string name="provider_name">Provider</string>
    <string name="customer_name">Customer</string>
    <string name="shop_name">Shop</string>
    <string name="setting">Setting</string>
    <string name="latest_name">Latest</string>
    <string name="suport">Support</string>
</resources>